apps/portal/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: portal
  namespace: portal
spec:
  selector:
    app: portal
  ports:
    - port: 80
      targetPort: 80
